src/components/Agenda/Agenda.css
.agenda {
  margin: 5%;
}

.agenda-contents {
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
  justify-content: flex-start;
  margin-top: 5%;
  margin-left: 2%;
}


.date-data>h2{
    font-weight: 600;
    padding-bottom: 30%;
}

.agenda-item{
    display: flex;
    align-items: center;
    flex-direction: column-reverse;
    justify-content: flex-start;
    align-items: flex-start;
    margin-top: 3%;
}
.talk-sessions{
    display: flex;
    flex-direction: column;
}

.agenda-item>p{
    width: max-content;
    padding: 1%;
}
.talk-sessions>h3 , .agenda-item>h3{
    font-size: 1.2rem;
    font-weight: bolder;
}

@media screen and (min-width: 768px) {
    .date-data>h2{
        font-weight: 600;
    }
    
    .agenda-item{
        display: grid;
        grid-template-columns: 30% 40% ;

    }
    .talk-sessions{
        
    }
    
    .agenda-item>p{
        /* width: max-content; */

    }
    .talk-sessions>h3 , .agenda-item>h3{
        font-size:1.4rem;
        font-weight: bolder;

    }
    
}

